# GR00T-WholeBodyControl

./: .gitignore  AGENTS.md  PERSON.md  PLAN.md  PROGRESS.md  README.md  SONICMJ_COMMAND_MIGRATION.md  TASK.md  process.md  pyproject.toml  task.json
.workflow/artifacts/: grounding.md  open_questions.json  paper_project_map.json
.workflow/artifacts/reviews/: architecture.md  executor.md  milestones.md  scope.md  testing.md
.workflow/runtime/: approve-plan-prompt.txt  approve-plan-stderr.txt  approve-plan-stdout.txt  resume-prompt.txt  resume-stderr.txt  resume-stdout.txt  run-prompt.txt  run-stderr.txt  run-stdout.txt
agent_test/: autodl_h20_server_test_2026-05-11.md
docs/: sonic_mj_event_migration.md
docs/source/: index.rst
docs/source/tutorials/: vla_inference.md  vla_workflow.md
gear_sonic/: eval_agent_trl.py  pyproject.toml  train_agent_trl.py
gear_sonic/config/: base.yaml
gear_sonic/trl/callbacks/: im_eval_callback.py
gear_sonic/trl/modules/: universal_token_modules.py
gear_sonic/utils/motion_lib/: torch_humanoid_batch.py
motionbricks/: .gitignore  README.md
motionbricks/motionbricks/motionbricks/motion_backbone/demo/: utils.py
sonic_mj/: __init__.py  assets.py  env_cfg.py  train.py  wrapper.py
sonic_mj/mdp/: __init__.py  commands.py  curriculum.py  events.py  observations.py  rewards.py  terminations.py
